fix: allow CORS preflight OPTIONS requests through security filter